--- a/app/assets/stylesheets/media-queries/mobile.scss
+++ b/app/assets/stylesheets/media-queries/mobile.scss
@@ -59,13 +59,19 @@
         font-family: "Font Awesome 5 Pro";
         content: "\f00d";
         font-size: 24px;
+        font-weight: 300;
+        display: none;
+    }
+    .render-notifications.mobile .fa-times, 
+    #top-nav-mobile ul .fa-times,
+    #mobile-menu ul .fa-times {
         position: absolute;
         cursor: pointer;
-        top: 0;
-        right: 10px;
-        width: 40px;
-        height: 40px;
-        padding: 12px;
+        top: 5px;
+        right: 30px;
+        height: 30px;
+        width: 30px!important;
+        margin: 0;
     }
 
     nav.notifications {
