--- a/app/assets/stylesheets/messages/new_layout.scss
+++ b/app/assets/stylesheets/messages/new_layout.scss
@@ -24,6 +24,7 @@
     ul {
         list-style: none;
         margin: 0;
+        padding: 0;
         &.float-left {
             display: inline-block;
             padding: 0;
@@ -62,7 +63,7 @@
             visibility: hidden;
             display: flex;
             flex-direction: column;
-            width: 100%;
+            width: 100vw;
             margin: 0;
             padding: 0;
             background: white;
